--- a/kukhta/public/index.html
+++ b/kukhta/public/index.html
@@ -40,7 +40,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>
+      Pavel Kukhta - one of the brightest classical guitarists in Europe.
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
